# sentiment-analysis-streamlit-app

./: README.md  pyproject.toml  scratchBoard.py  streamlit_app.py  streamlit_app_own_FS.py
models/model0/: keras_metadata.pb
models/model0/variables/: variables.index
