[tool.poetry]
name = "StreamlitApp"
version = "0.1.0"
description = "Streamlit application for pairwise sentiment analysis"
authors = ["Martijn Elands"]

[tool.poetry.dependencies]
python = "3.9.6"
streamlit = "^1.10.0"
tensorflow = "^2.9.1"
numpy = "^1.23.0"
transformers = "^4.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
